<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/janken_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/janken_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/gu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/gu"
            android:onClick="onJankenButtonTapped"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/gu" />

        <ImageButton
            android:id="@+id/choki"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/choki"
            android:onClick="onJankenButtonTapped"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/choki" />

        <ImageButton
            android:id="@+id/pa"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/pa"
            android:onClick="onJankenButtonTapped"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pa" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>